# ralph

./: .gitignore  README.md  pyproject.toml  requirements.txt
benchmarks/: asv.conf.json  benchmarks.py
docs/: conf.py  guide_install.rst  index.rst  notebooks.rst
docs/notebooks/: controller_setup.ipynb  intro_notebook.ipynb
examples/: example_event_config.yaml
src/microlensing_ralph/analyst/: light_curve_analyst.py
src/ralph/: __init__.py  _version.py  logs.py
src/ralph/analyst/: analyst.py  analyst_tools.py  cmd_analyst.py  event_analyst.py  fit_analyst.py  light_curve_analyst.py
src/ralph/controller/: controller.py
src/ralph/fitting_support/: fitter.py
src/ralph/fitting_support/pyLIMA/: fit_pyLIMA.py  plots_pyLIMA.py
src/ralph/fitting_support/pylima/: fit_pylima.py  plots_pylima.py
src/ralph/toolbox/: custom_process_pool_excecutor.py  input_tools.py  logs.py  output_tools.py
tests/microlensing_ralph/: test_analyst_tools.py  test_controller.py  test_fit_analyst.py  test_logs.py  test_packaging.py
tests/ralph/: test_analyst_tools.py  test_cmd_analyst.py  test_controller.py  test_controller_trials.py  test_event_analyst.py  test_example_module.py  test_fit_analyst.py  test_light_curve_analyst.py  test_logs.py  test_packaging.py  test_pyLIMA_fits.py
tests/ralph/data/input/cmd/: gdr3_ulens_025_result.csv
tests/ralph/data/input/controller/: events_info.csv
tests/ralph/data/input/controller/AT2024kwu/: config.yaml  fit_results.json  fit_stats.txt
tests/ralph/data/input/controller/GDR3_ULENS_025/: config.yaml
tests/ralph/data/input/controller/Gaia18cbf/: config.yaml
tests/ralph/data/input/controller/GaiaDR3-ULENS-025/: config.yaml
tests/ralph/data/input/controller/GaiaDR3_ULENS_018/: config.yaml  fit_results.json  fit_stats.txt
tests/ralph/data/input/controller/GaiaDR3_ULENS_025/: config.yaml
tests/ralph/data/input/ephemeris/: gaia_jpl_horizons_results.txt
tests/ralph/data/input/light_curves/: Gaia18cbf.csv
tests/ralph/data/input/test_results/: at2024_kwu_fit_results.json  at2024kwu_fit_results.json  fit_result_gdr3_ulens_025.json  gaia24amo_fit_results.json  gdr3_ulens_018_fit_results.json  gdr3_ulens_025_fit_results.json  gdr3_ulens_025_fit_results_best.json
tests/ralph/data/output/event_analyst/: config.yaml
tests/ralph/data/output/event_analyst/GDR3_ULENS_025/: config.yaml  gaia24amo_fit_results.json
tests/ralph/data/output/fit_analyst/: _PSPL_blend_no_piE.html  _PSPL_blend_piE.html  _PSPL_no_blend_no_piE.html
tests/ralph/test_cmd/output/: GDR3-ULEN-025_CMD_Gaia_BP.html  GDR3-ULEN-025_CMD_Gaia_G.html  GDR3-ULEN-025_CMD_Gaia_RP.html
tests/ralph/test_controller/: events_info.csv
tests/ralph/test_controller/Gaia18cbf/: config.yaml
tests/ralph/test_controller/GaiaDR3-ULENS-018/: config.yaml
tests/ralph/test_controller/GaiaDR3-ULENS-025/: config.yaml
trials/: analyst_tools_trials.py  cmd_analyst_trial.py  fit_analyst_trials.py  lc_analyst_trials.py
