
[project]
name = "ralph"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
readme = "README.md"
authors = [
    { name = "Katarzyna Kruszynska", email = "kruszynskakat@gmail.com" }
]
description = "Ralph is a package that will help you model batches of microlensing events."
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "cycler>=0.12.1",
    "ipython>=9.12.0",
    "json5>=0.14.0",
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "pyLIMA==1.9.8",
    "pytest>=9.0.3",
    "PyYAML>=6.0.3",
]

[project.urls]
"Source Code" = "https://github.com/KKruszynska/ralph"

# On a mac, install optional dependencies with `pip install '.[dev]'` (include the single quotes)
[project.optional-dependencies]
dev = [
    "asv[virtualenv]==0.6.5", # Used to compute performance benchmarks
    "black", # Used for static linting of files
    "jupyter", # Clears output from Jupyter notebooks
    "mypy", # Used for static type checking of files
    "pre-commit", # Used to run checks before finalizing a git commit
    "pylint", # Used for static linting of files
    "pytest",
    "pytest-cov", # Used to report total code coverage
    "ruff", # Used for static linting of files
]

[build-system]
requires = [
    "setuptools>=62", # Used to build and package the Python project
    "setuptools_scm>=6.2", # Gets release version from git. Makes it available programmatically
    "pip>=24.0", # Ensure building the package taking into account pyproject.toml setup
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/ralph/_version.py"

#[tool.pytest.ini_options]
#testpaths = [
#    "tests",
#    "src",
#    "docs",
#]
#addopts = "--doctest-modules --doctest-glob=*.rst"

[tool.pytest]
testpaths = [
    "tests",
    "src",
    "docs",
]
addopts = ["--doctest-modules", "--doctest-glob=*.rst"]
filterwarnings = [
    "ignore::UserWarning",
]

[tool.black]
line-length = 110
[tool.isort]
profile = "black"
line_length = 110
[tool.ruff]
line-length = 110
[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # pep8-naming
    "N",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # docstrings
    "D101",
    "D102",
    "D103",
    "D106",
    "D206",
    "D207",
    "D208",
    "D300",
    "D417",
    "D419",
    # Numpy v2.0 compatibility
    "NPY201",
]
ignore = [
    "UP006", # Allow non standard library generics in type hints
    "UP007", # Allow Union in type hints
    "SIM114", # Allow if with same arms
    "B028", # Allow default warning level
    "SIM117", # Allow nested with
    "UP015", # Allow redundant open parameters
    "UP028", # Allow yield in for loop
]

[tool.mypy]
python_version = "3.10"
[tool.setuptools.package-data]
ralph = ["py.typed"]

[tool.coverage.run]
omit=["src/ralph/_version.py"]
